LATEX-148: Installing LaTeX extension shouldn't install the Figure Macro LATEX-149: Move the Formula macro support inside the Formula extension